--- a/01-Basics and Structured Outputs.ipynb
+++ b/01-Basics and Structured Outputs.ipynb
@@ -19,7 +19,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install --quiet openai"
+    "%pip install --quiet openai pandas pydantic"
    ]
   },
   {
