--- a/02-More models.ipynb
+++ b/02-More models.ipynb
@@ -30,7 +30,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pip install --quiet openai-whisper"
+    "%pip install --quiet openai-whisper"
    ]
   },
   {
