--- a/04-Building apps with Gradio.ipynb
+++ b/04-Building apps with Gradio.ipynb
@@ -78,7 +78,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install --quiet gradio"
+    "%pip install --quiet gradio"
    ]
   },
   {
@@ -191,7 +191,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install --quiet openai-whisper"
+    "%pip install --quiet openai-whisper"
    ]
   },
   {
@@ -411,7 +411,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install --quiet openai"
+    "%pip install --quiet openai"
    ]
   },
   {
