--- a/02-More models.ipynb
+++ b/02-More models.ipynb
@@ -30,7 +30,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pip install --quiet openai-whisper"
+    "%pip install --quiet openai-whisper torch torchaudio whisperx pandas yt-dlp pydantic transformers torch sentence-transformers sacremoses timm"
    ]
   },
   {
@@ -725,16 +725,7 @@
     "\n",
     "### Putting things in categories\n",
     "\n",
-    "Now that we've settled on [facebook/bart-large-mnli](https://huggingface.co/facebook/bart-large-mnli), let's install what we need in order to use it."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!pip install --quiet transformers torch sentence-transformers sacremoses"
+    "Now that we've settled on [facebook/bart-large-mnli](https://huggingface.co/facebook/bart-large-mnli), let's use it!"
    ]
   },
   {
