--- a/03-Embeddings and doc search.ipynb
+++ b/03-Embeddings and doc search.ipynb
@@ -182,7 +182,7 @@
    "source": [
     "# Retrieval-augmented generation/document-based Q&A\n",
     "\n",
-    "These days everyone loves to search across documents. Let's see how that works with embeddings!"
+    "These days everyone loves to search across documents. [You shouldn't do it](https://themarkup.org/news/2024/03/29/nycs-ai-chatbot-tells-businesses-to-break-the-law), but people lov eit. Let's see how that works with embeddings!"
    ]
   },
   {
