--- a/01-Basics and Structured Outputs.ipynb
+++ b/01-Basics and Structured Outputs.ipynb
@@ -19,7 +19,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pip install --quiet openai pandas pydantic"
+    "%pip install --quiet openai pandas pydantic pandas tqdm"
    ]
   },
   {
@@ -515,7 +515,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"data/labeled-bills.csv\")\n",
+    "df = pd.read_csv(\"labeled-bills.csv\")\n",
     "df.head()"
    ]
   },
@@ -677,7 +677,7 @@
     "\n",
     "pd.options.display.max_colwidth = 300\n",
     "\n",
-    "df = pd.read_csv(\"data/comments.csv\")\n",
+    "df = pd.read_csv(\"comments.csv\")\n",
     "df.head()"
    ]
   },
@@ -781,7 +781,7 @@
     "# A new dataset\n",
     "import pandas as pd\n",
     "\n",
-    "df = pd.read_csv(\"data/articles.csv\")\n",
+    "df = pd.read_csv(\"articles.csv\")\n",
     "df.head()"
    ]
   },
