--- a/02-More models.ipynb
+++ b/02-More models.ipynb
@@ -661,13 +661,45 @@
     "from openai import OpenAI\n",
     "\n",
     "client = OpenAI(\n",
-    "    base_url=\"http://127.0.0.1:1234/v1\",\n",
+    "    base_url=\"http://127.0.0.1:10000/v1\",\n",
     "    api_key=\"lm-studio\"\n",
     ")\n",
     "\n",
     "\n",
     "completion = client.beta.chat.completions.parse(\n",
-    "    model=\"lmstudio-community/meta-llama-3-8b-instruct\",\n",
+    "    model=\"deepseek-r1:1.5b\",\n",
+    "    messages=[\n",
+    "        {\"role\": \"user\", \"content\": \"Who are you?\"},\n",
+    "    ]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(completion.choices[0].message.content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from openai import OpenAI\n",
+    "\n",
+    "# LM Studio is :1234, Msty is :10000\n",
+    "client = OpenAI(\n",
+    "    base_url=\"http://127.0.0.1:10000/v1\",\n",
+    "    api_key=\"lm-studio\"\n",
+    ")\n",
+    "\n",
+    "\n",
+    "completion = client.beta.chat.completions.parse(\n",
+    "    model=\"deepseek-r1:1.5b\",\n",
     "    messages=[\n",
     "        {\"role\": \"system\", \"content\": \"Summarize this transcript in four descriptive bullet points.\"},\n",
     "        {\"role\": \"user\", \"content\": transcript},\n",
